--- a/index.html
+++ b/index.html
@@ -15,16 +15,33 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>Ekta Playlist</h1>
-        <div class="songlist"></div>
+        <div class="songlist">
+            <h1>Ekta Playlist</h1>
+            <div class="songItem">
+                <img src="/views/images/images.jpg">
+                <span>Perfect</span>
+                <span class="songListPlay"></span>
+            </div>
+        </div>
         <div class="songbanner"></div>
+
     </div>
     <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min="0" max="100">
         <div class="icons">
             <!--  font icons ------->
-        </div>
+            <span class="material-symbols-outlined">
+                skip_previous
+                </span>
+            <span class="material-symbols-outlined">
+                play_arrow
+                </span>
+                <span class="material-symbols-outlined">
+                    skip_next
+                    </span>
+             
     </div>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="script.js"></script>
 </body>
 </html>
