--- a/index.html
+++ b/index.html
@@ -1,47 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
+
+  <body>
     <nav>
-        <ul>
-            <li class="brand"><img src="./views/images/spotify.png" alt ="Spotify">Spotify</li>
-            <li>Home</li>
-            <li>About</li>
-        </ul>
+      <ul>
+        <li class="brand">
+          <img src="./views/images/spotify.png" alt="Spotify" />Spotify
+        </li>
+        <li>Home</li>
+        <li>About</li>
+      </ul>
     </nav>
     <div class="container">
-        <div class="songlist">
-            <h1>Ekta Playlist</h1>
-            <div class="songItem">
-                <img src="/views/images/images.jpg">
-                <span>Perfect</span>
-                <span class="songListPlay"></span>
-            </div>
+      <div class="songlist">
+        <h1>Ekta Playlist</h1>
+        <div class="songItemContainer">
+          <div class="songItem">
+            <img src="/views/images/images.jpg" />
+            <span>Perfect</span>
+            <span class="songListPlay">
+              <span class="timestamp"
+                ><span class="material-symbols-outlined">
+                  play_arrow
+                </span></span
+              >
+            </span>
+          </div>
+          <div class="songItem">
+            <img src="/views/images/images.jpg" />
+            <span>Perfect</span>
+            <span class="songListPlay">
+              <span class="timestamp"
+                ><span class="material-symbols-outlined">
+                  play_arrow
+                </span></span
+              >
+            </span>
+          </div>
+          <div class="songItem">
+            <img src="/views/images/images.jpg" />
+            <span>Perfect</span>
+            <span class="songListPlay">
+              <span class="timestamp"
+                ><span class="material-symbols-outlined">
+                  play_arrow
+                </span></span
+              >
+            </span>
+          </div>
+          <div class="songItem">
+            <img src="/views/images/images.jpg" />
+            <span>Perfect</span>
+            <span class="songListPlay">
+              <span class="timestamp"
+                ><span class="material-symbols-outlined">
+                  play_arrow
+                </span></span
+              >
+            </span>
+          </div>
         </div>
-        <div class="songbanner"></div>
-
+      </div>
+      <div class="songbanner"></div>
     </div>
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100">
-        <div class="icons">
-            <!--  font icons ------->
-            <span class="material-symbols-outlined">
-                skip_previous
-                </span>
-            <span class="material-symbols-outlined">
-                play_arrow
-                </span>
-                <span class="material-symbols-outlined">
-                    skip_next
-                    </span>
-             
+      <input type="range" name="range" id="myProgressBar" min="0" max="100" />
+      <div class="icons">
+        <!--  font icons ------->
+        <span class="material-symbols-outlined"> skip_previous </span>
+        <span class="material-symbols-outlined" id="masterPlay">
+          play_arrow
+        </span>
+        <span class="material-symbols-outlined"> skip_next </span>
+      </div>
+      <div class="songInfo">
+        <img src="./views/images/audio.webp" width="52px" />
+        <i>Perfect</i>
+      </div>
     </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
